Origin now at $C000
Removed the need for BASIC stub.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 .DS_Store
 Source/Assembly/Project 01/vice.txt
 Source/Assembly/Project 01/64s.a
+.DS_Store
+Source/Assembly/Project 01/64s.a
+Source/Assembly/Project 01/vice.txt
