--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
 .DS_Store
 vice.txt
 symbols.txt
+.xcworkspace/
+xcuserdata/
+*.xcuserdatad/
+*.xcscheme
+*.xcsettings
+*.xcbkptlist
+build/
+.swiftpm/
+.build/
